Fix typo in file names

--- a/01-create_classifiers.ipynb
+++ b/01-create_classifiers.ipynb
@@ -5,10 +5,10 @@
    "id": "58f4f93f",
    "metadata": {
     "papermill": {
-     "duration": 0.003634,
-     "end_time": "2024-09-18T05:49:11.538759",
+     "duration": 0.005378,
+     "end_time": "2024-09-24T04:23:18.403436",
      "exception": false,
-     "start_time": "2024-09-18T05:49:11.535125",
+     "start_time": "2024-09-24T04:23:18.398058",
      "status": "completed"
     },
     "tags": []
@@ -22,10 +22,10 @@
    "id": "bce162da",
    "metadata": {
     "papermill": {
-     "duration": 0.002853,
-     "end_time": "2024-09-18T05:49:11.546080",
+     "duration": 0.003252,
+     "end_time": "2024-09-24T04:23:18.411753",
      "exception": false,
-     "start_time": "2024-09-18T05:49:11.543227",
+     "start_time": "2024-09-24T04:23:18.408501",
      "status": "completed"
     },
     "tags": []
@@ -40,16 +40,16 @@
    "id": "c8549c11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:49:11.552414Z",
-     "iopub.status.busy": "2024-09-18T05:49:11.552141Z",
-     "iopub.status.idle": "2024-09-18T05:49:11.556143Z",
-     "shell.execute_reply": "2024-09-18T05:49:11.555542Z"
+     "iopub.execute_input": "2024-09-24T04:23:18.419022Z",
+     "iopub.status.busy": "2024-09-24T04:23:18.418721Z",
+     "iopub.status.idle": "2024-09-24T04:23:18.422818Z",
+     "shell.execute_reply": "2024-09-24T04:23:18.422200Z"
     },
     "papermill": {
-     "duration": 0.008743,
-     "end_time": "2024-09-18T05:49:11.557488",
+     "duration": 0.009335,
+     "end_time": "2024-09-24T04:23:18.424188",
      "exception": false,
-     "start_time": "2024-09-18T05:49:11.548745",
+     "start_time": "2024-09-24T04:23:18.414853",
      "status": "completed"
     },
     "tags": []
@@ -65,16 +65,16 @@
    "id": "c82342ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:49:11.564219Z",
-     "iopub.status.busy": "2024-09-18T05:49:11.563970Z",
-     "iopub.status.idle": "2024-09-18T05:49:15.059462Z",
-     "shell.execute_reply": "2024-09-18T05:49:15.058695Z"
+     "iopub.execute_input": "2024-09-24T04:23:18.430565Z",
+     "iopub.status.busy": "2024-09-24T04:23:18.430197Z",
+     "iopub.status.idle": "2024-09-24T04:23:21.788434Z",
+     "shell.execute_reply": "2024-09-24T04:23:21.787636Z"
     },
     "papermill": {
-     "duration": 3.5004,
-     "end_time": "2024-09-18T05:49:15.060779",
+     "duration": 3.363322,
+     "end_time": "2024-09-24T04:23:21.790241",
      "exception": false,
-     "start_time": "2024-09-18T05:49:11.560379",
+     "start_time": "2024-09-24T04:23:18.426919",
      "status": "completed"
     },
     "tags": []
@@ -124,16 +124,16 @@
    "id": "30758c64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:49:15.067696Z",
-     "iopub.status.busy": "2024-09-18T05:49:15.067270Z",
-     "iopub.status.idle": "2024-09-18T05:49:15.071137Z",
-     "shell.execute_reply": "2024-09-18T05:49:15.070479Z"
+     "iopub.execute_input": "2024-09-24T04:23:21.796111Z",
+     "iopub.status.busy": "2024-09-24T04:23:21.795619Z",
+     "iopub.status.idle": "2024-09-24T04:23:21.799496Z",
+     "shell.execute_reply": "2024-09-24T04:23:21.799089Z"
     },
     "papermill": {
-     "duration": 0.008544,
-     "end_time": "2024-09-18T05:49:15.072453",
+     "duration": 0.008014,
+     "end_time": "2024-09-24T04:23:21.800631",
      "exception": false,
-     "start_time": "2024-09-18T05:49:15.063909",
+     "start_time": "2024-09-24T04:23:21.792617",
      "status": "completed"
     },
     "tags": []
@@ -170,16 +170,16 @@
    "id": "7ebb39be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:49:15.079137Z",
-     "iopub.status.busy": "2024-09-18T05:49:15.078820Z",
-     "iopub.status.idle": "2024-09-18T05:52:08.477070Z",
-     "shell.execute_reply": "2024-09-18T05:52:08.476322Z"
+     "iopub.execute_input": "2024-09-24T04:23:21.806732Z",
+     "iopub.status.busy": "2024-09-24T04:23:21.806469Z",
+     "iopub.status.idle": "2024-09-24T04:23:21.810604Z",
+     "shell.execute_reply": "2024-09-24T04:23:21.810193Z"
     },
     "papermill": {
-     "duration": 173.403671,
-     "end_time": "2024-09-18T05:52:08.478875",
+     "duration": 0.008597,
+     "end_time": "2024-09-24T04:23:21.811746",
      "exception": false,
-     "start_time": "2024-09-18T05:49:15.075204",
+     "start_time": "2024-09-24T04:23:21.803149",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "c0ae54cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:52:08.487059Z",
-     "iopub.status.busy": "2024-09-18T05:52:08.486800Z",
-     "iopub.status.idle": "2024-09-18T05:52:08.871154Z",
-     "shell.execute_reply": "2024-09-18T05:52:08.870486Z"
+     "iopub.execute_input": "2024-09-24T04:23:21.817090Z",
+     "iopub.status.busy": "2024-09-24T04:23:21.816854Z",
+     "iopub.status.idle": "2024-09-24T04:23:22.239118Z",
+     "shell.execute_reply": "2024-09-24T04:23:22.238450Z"
     },
     "papermill": {
-     "duration": 0.389658,
-     "end_time": "2024-09-18T05:52:08.872377",
+     "duration": 0.426786,
+     "end_time": "2024-09-24T04:23:22.240703",
      "exception": false,
-     "start_time": "2024-09-18T05:52:08.482719",
+     "start_time": "2024-09-24T04:23:21.813917",
      "status": "completed"
     },
     "tags": []
@@ -267,10 +267,10 @@
    "id": "f28e8f39",
    "metadata": {
     "papermill": {
-     "duration": 0.002791,
-     "end_time": "2024-09-18T05:52:08.878257",
+     "duration": 0.003414,
+     "end_time": "2024-09-24T04:23:22.247466",
      "exception": false,
-     "start_time": "2024-09-18T05:52:08.875466",
+     "start_time": "2024-09-24T04:23:22.244052",
      "status": "completed"
     },
     "tags": []
@@ -284,10 +284,10 @@
    "id": "bd63ddf5",
    "metadata": {
     "papermill": {
-     "duration": 0.002709,
-     "end_time": "2024-09-18T05:52:08.883687",
+     "duration": 0.003065,
+     "end_time": "2024-09-24T04:23:22.254109",
      "exception": false,
-     "start_time": "2024-09-18T05:52:08.880978",
+     "start_time": "2024-09-24T04:23:22.251044",
      "status": "completed"
     },
     "tags": []
@@ -302,16 +302,16 @@
    "id": "55d73ca5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:52:08.890387Z",
-     "iopub.status.busy": "2024-09-18T05:52:08.890137Z",
-     "iopub.status.idle": "2024-09-18T05:52:15.363607Z",
-     "shell.execute_reply": "2024-09-18T05:52:15.363116Z"
+     "iopub.execute_input": "2024-09-24T04:23:22.261183Z",
+     "iopub.status.busy": "2024-09-24T04:23:22.260890Z",
+     "iopub.status.idle": "2024-09-24T04:23:28.921302Z",
+     "shell.execute_reply": "2024-09-24T04:23:28.920809Z"
     },
     "papermill": {
-     "duration": 6.478208,
-     "end_time": "2024-09-18T05:52:15.364755",
+     "duration": 6.665475,
+     "end_time": "2024-09-24T04:23:28.922639",
      "exception": false,
-     "start_time": "2024-09-18T05:52:08.886547",
+     "start_time": "2024-09-24T04:23:22.257164",
      "status": "completed"
     },
     "tags": []
@@ -321,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:06.466067\n"
+      "Model training time: 0:00:06.652297\n"
      ]
     }
    ],
@@ -358,10 +358,10 @@
    "id": "2b3ccf5f",
    "metadata": {
     "papermill": {
-     "duration": 0.002218,
-     "end_time": "2024-09-18T05:52:15.369523",
+     "duration": 0.002662,
+     "end_time": "2024-09-24T04:23:28.928121",
      "exception": false,
-     "start_time": "2024-09-18T05:52:15.367305",
+     "start_time": "2024-09-24T04:23:28.925459",
      "status": "completed"
     },
     "tags": []
@@ -376,16 +376,16 @@
    "id": "680f093d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:52:15.375063Z",
-     "iopub.status.busy": "2024-09-18T05:52:15.374853Z",
-     "iopub.status.idle": "2024-09-18T05:52:23.217513Z",
-     "shell.execute_reply": "2024-09-18T05:52:23.216912Z"
+     "iopub.execute_input": "2024-09-24T04:23:28.934809Z",
+     "iopub.status.busy": "2024-09-24T04:23:28.934531Z",
+     "iopub.status.idle": "2024-09-24T04:23:36.022146Z",
+     "shell.execute_reply": "2024-09-24T04:23:36.021540Z"
     },
     "papermill": {
-     "duration": 7.847123,
-     "end_time": "2024-09-18T05:52:23.218908",
+     "duration": 7.092532,
+     "end_time": "2024-09-24T04:23:36.023436",
      "exception": false,
-     "start_time": "2024-09-18T05:52:15.371785",
+     "start_time": "2024-09-24T04:23:28.930904",
      "status": "completed"
     },
     "tags": []
@@ -406,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:03.925476\n",
+      "Model training time: 0:00:03.563984\n",
       "\n",
       "Region: South America\n",
       "label\n",
@@ -419,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:03.891256\n",
+      "Model training time: 0:00:03.492598\n",
       "\n"
      ]
     }
@@ -446,7 +446,7 @@
     "    pu_model_subset = clone(pu_model)\n",
     "    t0 = time.time()\n",
     "    pu_model_subset.fit(x_pu_subset, y_pu_subset)\n",
-    "    dump(pu_model, output_subset, compress=True)\n",
+    "    dump(pu_model_subset, output_subset, compress=True)\n",
     "    duration = timedelta(seconds=time.time() - t0)\n",
     "    print(f\"Model training time: {duration}\")\n",
     "\n",
@@ -458,10 +458,10 @@
    "id": "15b4ab2e",
    "metadata": {
     "papermill": {
-     "duration": 0.003121,
-     "end_time": "2024-09-18T05:52:23.225554",
+     "duration": 0.003003,
+     "end_time": "2024-09-24T04:23:36.029807",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.222433",
+     "start_time": "2024-09-24T04:23:36.026804",
      "status": "completed"
     },
     "tags": []
@@ -475,10 +475,10 @@
    "id": "186b56a9",
    "metadata": {
     "papermill": {
-     "duration": 0.003016,
-     "end_time": "2024-09-18T05:52:23.231694",
+     "duration": 0.002899,
+     "end_time": "2024-09-24T04:23:36.035936",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.228678",
+     "start_time": "2024-09-24T04:23:36.033037",
      "status": "completed"
     },
     "tags": []
@@ -493,16 +493,16 @@
    "id": "2b4a61e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:52:23.238580Z",
-     "iopub.status.busy": "2024-09-18T05:52:23.238313Z",
-     "iopub.status.idle": "2024-09-18T05:52:23.455844Z",
-     "shell.execute_reply": "2024-09-18T05:52:23.455207Z"
+     "iopub.execute_input": "2024-09-24T04:23:36.043055Z",
+     "iopub.status.busy": "2024-09-24T04:23:36.042790Z",
+     "iopub.status.idle": "2024-09-24T04:23:36.310914Z",
+     "shell.execute_reply": "2024-09-24T04:23:36.310204Z"
     },
     "papermill": {
-     "duration": 0.222896,
-     "end_time": "2024-09-18T05:52:23.457513",
+     "duration": 0.273839,
+     "end_time": "2024-09-24T04:23:36.312777",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.234617",
+     "start_time": "2024-09-24T04:23:36.038938",
      "status": "completed"
     },
     "tags": []
@@ -512,7 +512,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:00.210553\n"
+      "Model training time: 0:00:00.261055\n"
      ]
     }
    ],
@@ -545,10 +545,10 @@
    "id": "e1c42b19",
    "metadata": {
     "papermill": {
-     "duration": 0.00361,
-     "end_time": "2024-09-18T05:52:23.465042",
+     "duration": 0.004348,
+     "end_time": "2024-09-24T04:23:36.321635",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.461432",
+     "start_time": "2024-09-24T04:23:36.317287",
      "status": "completed"
     },
     "tags": []
@@ -563,16 +563,16 @@
    "id": "4de50175",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-18T05:52:23.474266Z",
-     "iopub.status.busy": "2024-09-18T05:52:23.473930Z",
-     "iopub.status.idle": "2024-09-18T05:52:23.775095Z",
-     "shell.execute_reply": "2024-09-18T05:52:23.774398Z"
+     "iopub.execute_input": "2024-09-24T04:23:36.330893Z",
+     "iopub.status.busy": "2024-09-24T04:23:36.330593Z",
+     "iopub.status.idle": "2024-09-24T04:23:36.595032Z",
+     "shell.execute_reply": "2024-09-24T04:23:36.594328Z"
     },
     "papermill": {
-     "duration": 0.307928,
-     "end_time": "2024-09-18T05:52:23.776759",
+     "duration": 0.271067,
+     "end_time": "2024-09-24T04:23:36.596659",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.468831",
+     "start_time": "2024-09-24T04:23:36.325592",
      "status": "completed"
     },
     "tags": []
@@ -587,7 +587,7 @@
       "negative     57\n",
       "positive    170\n",
       "dtype: int64\n",
-      "Model training time: 0:00:00.077969\n",
+      "Model training time: 0:00:00.072352\n",
       "\n",
       "Region: South America\n",
       "label\n",
@@ -600,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:00.206766\n",
+      "Model training time: 0:00:00.175944\n",
       "\n"
      ]
     }
@@ -640,10 +640,10 @@
    "id": "f744bcac",
    "metadata": {
     "papermill": {
-     "duration": 0.004129,
-     "end_time": "2024-09-18T05:52:23.785432",
+     "duration": 0.003824,
+     "end_time": "2024-09-24T04:23:36.604442",
      "exception": false,
-     "start_time": "2024-09-18T05:52:23.781303",
+     "start_time": "2024-09-24T04:23:36.600618",
      "status": "completed"
     },
     "tags": []
@@ -672,14 +672,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 196.074835,
-   "end_time": "2024-09-18T05:52:26.410364",
+   "duration": 21.964291,
+   "end_time": "2024-09-24T04:23:39.226221",
    "environment_variables": {},
    "exception": null,
    "input_path": "01-create_classifiers.ipynb",
    "output_path": "01-create_classifiers.ipynb",
    "parameters": {},
-   "start_time": "2024-09-18T05:49:10.335529",
+   "start_time": "2024-09-24T04:23:17.261930",
    "version": "2.4.0"
   }
  },
